# nrf52840_BLE

./: .gitignore  CMakeLists.txt  FIRMWARE_AUDIT_REPORT.md  Kconfig  README.md  README_REPORT.md  app.overlay  nrf52840_ble.overlay  prj.conf
LC76G_GPS_Module_code/ESP32/L76X/: L76X.ino
TMP119A_EVM_V1.0/源代码/Arduino MEGA2560 R3/TMP119_EVM/: TMP119_EVM.ino
TMP119A_EVM_V1.0/源代码/STC12C5A60S2/ReadMe/: 使用说明.txt
TMP119A_EVM_V1.0/源代码/STC12C5A60S2/app/: app.c  app.h
TMP119A_EVM_V1.0/源代码/STC12C5A60S2/list/: ANT_I2C.lst  ANT_UART1.lst  STARTUP.lst  TMP119_EVM.lst  TMP119_EVM.m51  app.lst  delay.lst
TMP119A_EVM_V1.0/源代码/STC12C5A60S2/prj/: TMP119_EVM.Opt  TMP119_EVM.Uv2  TMP119_EVM_Opt.Bak
TMP119A_EVM_V1.0/源代码/STC12C5A60S2/stclib/: STC12C5A60S2.h  delay.c  delay.h
TMP119A_EVM_V1.0/源代码/STM32F103VET6/ANT-TB-F103-V10/: Board_Driver.c  Board_Driver.h
TMP119A_EVM_V1.0/源代码/STM32F103VET6/APP/: app.c
TMP119A_EVM_V1.0/源代码/STM32F103VET6/ReadMe/: 使用说明.txt
TMP119A_EVM_V1.0/源代码/STM32F103VET6/TFT/: TFT_Driver.c  TFT_Driver.h  TFT_IO.c  TFT_IO.h
TMP119A_EVM_V1.0/源代码/STM32F103VET6/list/: My_System.map  STM32F10x.lst  startup_stm32f10x_hd.lst
TMP119A_EVM_V1.0/源代码/STM32F103VET6/prj/: My_System.plg  My_System.uvguix.Administrator  My_System.uvguix.T420  My_System.uvguix.ancient_times  My_System.uvopt  My_System.uvoptx  My_System.uvprojx  My_System_ADS123x.dep  My_System_MyDevice.dep  My_System_Opt.Bak  My_System_Target 1.dep  My_System_Uv2.Bak
TMP119A_EVM_V1.0/源代码/STM32F407VET6/APP/: _MAIN.c
TMP119A_EVM_V1.0/源代码/STM32F407VET6/CORE/: arm_math.h
TMP119A_EVM_V1.0/源代码/STM32F407VET6/ReadMe/: 使用说明.txt
TMP119A_EVM_V1.0/源代码/STM32F407VET6/System_Config/: System_Config.c  System_Config.h
TMP119A_EVM_V1.0/源代码/STM32F407VET6/User/: delay.c  delay.h
TMP119A_EVM_V1.0/源代码/STM32F407VET6/prj/: JLinkLog.txt  My_System.uvguix.Administrator  My_System.uvguix.T420  My_System.uvguix.ancient_times  My_System.uvoptx  My_System.uvprojx
_pdf_txt/: gh3026_datasheet_v1_1.txt  ghm3x2x_driver_porting_v4_4.txt  goodix_algo_sdk_if_v0_4.txt  nrf52840_gh3x2x_ncs_porting_v1_00.txt
_tdk_tmp/sources/board-hal/: common.c  conf_clock.h  conf_usb.h  dbg_gpio.c  dbg_gpio.h  delay.c  delay.h  flash_manager.c  flash_manager.h  gpio.c  i2c_master.c  i2c_master.h  rtc_timer.c  rtc_timer.h  spi_master.c  spi_master.h  sys_timer.c  sys_timer.h  timer.c  timer.h  uart.c  uart_mngr.c  usb.c  usb.h
_tdk_tmp/sources/examples/example-algo/: main.c
_tdk_tmp/sources/examples/example-eis/: example-eis.c  example-eis.cproj  example-eis.h  main.c
_tdk_tmp/sources/examples/example-high-rate-logger/: example-high-rate-logger.c
_tdk_tmp/sources/examples/example-pedometer/: example-pedometer.c  main.c  (+2 more)
docs/: audio_handoff_protocol.md  esp32_audio_handoff_requirements.md  nrf_audio_handoff_design.md  nrf_ble_uplink_protocol_for_android.md
dts/bindings/power/: maxim,max77658.yaml
dts/bindings/sensor/: ti,tmp119-sw-i2c.yaml
gh3x2x_demo_based_on_nsc/: CMakeLists.txt  nrf52840dk_nrf52840.overlay  prj.conf
gh3x2x_demo_based_on_nsc/src/: main.c
gh3x2x_demo_based_on_nsc/src/gh3x2x_lib_v4100/: gh3x2x_task.c
gh3x2x_demo_based_on_nsc/src/gh3x2x_lib_v4100/algo_lib/M4_gcc_softfp/: tolib.bat
gh3x2x_demo_based_on_nsc/src/gh3x2x_lib_v4100/algo_params/: pv_v2.0.1_spo2wrnet_for_cardiffA_v2.23_masimo_0ae2fc.c
gh3x2x_demo_based_on_nsc/src/gh3x2x_lib_v4100/demo_algo_code/goodix_algo_application/inc/: gh3x2x_demo_algo_config.h
gh3x2x_demo_based_on_nsc/src/gh3x2x_lib_v4100/demo_algo_code/goodix_algo_application/src/: gh3x2x_demo_algo_call.c  gh3x2x_demo_algo_hook.c
gh3x2x_demo_based_on_nsc/src/gh3x2x_lib_v4100/demo_algo_code/goodix_algo_call/src/: gh3x2x_demo_algo_call_hr.c  gh3x2x_demo_algo_call_spo2.c
gh3x2x_demo_based_on_nsc/src/gh3x2x_lib_v4100/demo_kernel_code/inc/: gh3x2x_demo_config.h
gh3x2x_demo_based_on_nsc/src/gh3x2x_lib_v4100/demo_kernel_code/src/: gh3x2x_demo.c  gh3x2x_demo_reg_array.c  gh3x2x_demo_user.c
gh3x2x_demo_based_on_nsc/src/gh3x2x_lib_v4100/drv_lib/: gh3x2x_drv.h
gh3x2x_demo_based_on_nsc/src/service/: ghealth.c  ghealth.h
src/app/Inc/: app_audio_route.h  app_ble_maint_ctrl.h  app_bus.h  app_data_store.h  app_db.h  app_esp_link.h  app_gps.h  app_imu_test.h  app_lifecycle.h  app_mode_manager.h  app_pm_test.h  app_ppg_gpio_test.h  app_ppg_hr.h  app_quiet_manager.h  app_rtc.h  app_spk_diag.h  app_state.h  app_temp_test.h  app_uplink_service.h  app_wifi_boot_ctrl.h  imu_algo.h  pm_service.h  spk_postproc.h  system_state.h
src/app/Src/: app_audio_route.c  app_ble_maint_ctrl.c  app_bus.c  app_data_store.c  app_db.c  app_esp_link.c  app_gps.c  app_imu_test.c  app_lifecycle.c  app_mode_manager.c  app_pm_test.c  app_ppg_gpio_test.c  app_ppg_hr.c  app_quiet_manager.c  app_rtc.c  app_spk_diag.c  app_state.c  app_temp_test.c  app_uplink_service.c  app_wifi_boot_ctrl.c  imu_algo.c  main.c  pm_service.c  spk_postproc.c  system_state.c
src/common/Inc/: audio_jitter.h  driver_stats.h  error.h  rt_thread.h  spi_bus_arbiter.h  types.h
src/common/Src/: audio_jitter.c  driver_stats.c  rt_thread.c  spi_bus_arbiter.c
src/driver/Inc/: driver_audio_nrf.h  driver_ble_nrf.h  driver_flash_nrf.h  driver_gps_nrf.h  driver_imu_nrf.h  driver_mic_nrf.h  driver_pm_nrf.h  driver_ppg_nrf.h  driver_spk_nrf.h  driver_temp_nrf.h
src/driver/Src/: audio_nrf.c  ble_nrf.c  flash_nrf.c  gps_nrf.c  imu_nrf.c  mic_nrf.c  pm_nrf.c  ppg_nrf.c  spk_nrf.c  temp_nrf.c
src/driver/Template/: driver_template.c  driver_template.h
src/gh3x2x_lib_v4100/: gh3x2x_task.c
src/hal/Inc/: hal_audio.h  hal_ble.h  hal_flash.h  hal_gps.h  hal_imu.h  hal_mic.h  hal_pm.h  hal_ppg.h  hal_spk.h  hal_temp.h
src/hal/Src/: hal_audio.c  hal_ble.c  hal_flash.c  hal_gps.c  hal_imu.c  hal_mic.c  hal_pm.c  hal_ppg.c  hal_spk.c  hal_temp.c
src/platform/Inc/: boot_tone.h  platform_caps.h  platform_init.h  platform_registry.h  platform_shared_bus.h
src/platform/Src/: boot_tone.c  platform_caps.c  platform_init.c  platform_registry.c  platform_shared_bus.c
tools/esp32c3/: README.md  flash_via_nrf_boot.sh
traini_grpc/: README.md  server.py  traini.proto
(+169 files in other folders)
